# datadoc

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  release.yml
cli_project/: __init__.py  cli.py
cli_project/commands/: greeting.py
cli_project/models/: __init__.py  odcs.py
datadoc/: cli.py
datadoc/commands/: __init__.py  extract.py  greeting.py
datadoc/models/: __init__.py  odcs.py
examples/: base_example.yml  sample_contract.yml
schema/: odcs-json-schema-latest.json
scripts/: generate_models.py
tests/: __init__.py  test_cli.py  test_extract.py
